crates/linesmith/src/tui/snapshots/linesmith__tui__main_menu__tests__main_menu_cursor_on_install_row.snap
---
source: crates/linesmith/src/tui/main_menu.rs
expression: "render_to_string(&state, 60, 14)"
---
                      linesmith config                      
                                                            
                                                            
  Edit Lines                                                
  Edit Colors                                               
  Powerline Setup                                           
  Terminal Options                                          
  Global Overrides                                          
▶ Install to Claude Code                                    
  Exit                                                      
                                                            
                                                            
                                                            
          Wire linesmith into Claude Code settings
